# ChangeLog for sys-fs/exfat-utils
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/exfat-utils/ChangeLog,v 1.9 2013/02/16 05:28:20 zmedico Exp $

  16 Feb 2013; Zac Medico <zmedico@gentoo.org> exfat-utils-1.0.0.ebuild:
  Add ~x86-linux keyword.

*exfat-utils-1.0.0 (21 Jan 2013)

  21 Jan 2013; Samuli Suominen <ssuominen@gentoo.org>
  +exfat-utils-1.0.0.ebuild:
  Version bump.

  09 Jan 2013; Mike Frysinger <vapier@gentoo.org> exfat-utils-0.9.8.ebuild:
  Add arm love too.

  09 Jan 2013; Mike Frysinger <vapier@gentoo.org>
  +files/exfat-utils-0.9.8-build-vars.patch, exfat-utils-0.9.8.ebuild:
  Fix cross-compiling -- patch already in upstream.

  12 Dec 2012; Samuli Suominen <ssuominen@gentoo.org>
  -exfat-utils-0.9.7.ebuild:
  old

*exfat-utils-0.9.8 (27 Aug 2012)

  27 Aug 2012; Samuli Suominen <ssuominen@gentoo.org>
  +exfat-utils-0.9.8.ebuild:
  Version bump.

  17 Mar 2012; Samuli Suominen <ssuominen@gentoo.org>
  -exfat-utils-0.9.5.ebuild:
  old

*exfat-utils-0.9.7 (17 Mar 2012)

  17 Mar 2012; Samuli Suominen <ssuominen@gentoo.org>
  +exfat-utils-0.9.7.ebuild:
  Version bump wrt #400745 by teidakankan. Move everything from / to /usr.

*exfat-utils-0.9.5 (14 Jun 2011)

  14 Jun 2011; Samuli Suominen <ssuominen@gentoo.org>
  +exfat-utils-0.9.5.ebuild:
  Initial commit wrt #371589 by Azamat H. Hackimov