@@ -4,14 +4,20 @@ Hash: SHA256
 AUX exfat-utils-0.9.8-build-vars.patch 752 SHA256 ebbddeec420943166dc397b40486e4d82abac80bf385dbc5f7735c1d5bc71ff4 SHA512 fe567df19053909120d6f36a05d97a0945cad0ef1ad2388da6911cde77f06c18f5981294e3a68e3d200972c0233659f5f69b50328cb7af95fca5ca9afcfa7554 WHIRLPOOL b4d8c5ad4abaed381f1a01d4a2c623ae23846e33945c798cb661f91b705c08b910b08bfc78f41478ea9c6a7f9eea4c644c52047eed3f45201cf1cd0910e0e177
 DIST exfat-utils-0.9.8.tar.gz 51557 SHA256 97d8c77e048d0fdc2e5425ff22a139306ce3f1575b58e56c26bb968930a423bb SHA512 bff817b3b886d0ea03439c55d6497336e880b4eb5298e06c7fe8c60216dc491d27df9258865232a71d1a59fe1b3cffb38191caea5aaa4ad8965e3526126a2a38 WHIRLPOOL 4fb52ee2aefcb59692dbc66530cae6d813b1497a9e5900c2c074452cc759770fd60b3bf3fb41cf146dc98ece1f065e5cf50443017739823761cdd30a2c2d6c9b
 DIST exfat-utils-1.0.0.tar.gz 51759 SHA256 9079c6fa1eea33ca635252985c226141968d88445abf0255a4119bf54028df1d SHA512 1557bbc75602d46c55393b653f74a7c97f58a0bc7d22062ae1bb7b250dee5cb8b49a85ed99c49e61016722819527a9d64e1979283728c1f66f69755f78c811db WHIRLPOOL 1d9365087c4adb5fa08f2d33585add9e943821c52b03e860cb77ea8a5ab7e0b35dc4c4bf80a0663414973de1e69e75dcb79254e8f7b80fdd376c603e7753f303
+DIST exfat-utils-1.0.1.tar.gz 51905 SHA256 eeacedca1878065dc3886674ae39cd51149c37bd7d6d7e9325c971a1d1acdab3 SHA512 e2716e902110858e33e21395c45881315cbe469cf5192de130031ce989bdcb388944ad22d8588ae1a29d682615809be886086d313d5ab46b3aafa6d356a0e8ac WHIRLPOOL 7d78afd9a37fed433704d8b6873d8ab19bd3d4e5c0e5951961f743768483c9843d51aa7342ec67e36466bb3141085a44c2d6ac6140f23361a4efd0d4ebcc6de1
 EBUILD exfat-utils-0.9.8.ebuild 803 SHA256 548043184d0b90e4598194a02848d7501692d5b5c1a7776257455697bccffc27 SHA512 4405084c1eead6e5f4a245e3e5903020b206c03bef736d3f5f7dd8acb02ed96757bf9bd45e1cb33bdb92a2b3f274bcbfb015f1565c6e45ec205fd157f6e4290f WHIRLPOOL 3b1c04d0949b9fc731e122d9e6f594015d14f9259d562e5d769c854b705a414b969b3ffef3a55cae671e37a9c3ebbe6919bba93a18c4d0fc48661fc457ff802f
 EBUILD exfat-utils-1.0.0.ebuild 748 SHA256 4bb5f64ecaf3821d59e94c58c13c145fcd777285980ee42ff27865b06fac1e56 SHA512 1249651b4cf4ae90fe82b7fff90314744112dd2185fd829d50f072fb2328c4a2a9e03c9980a9041c3d038f61a394c3f2074f4e2caf573a0aebbb00fcd1b3727f WHIRLPOOL bb70a76b5e99b92b5f7c611f26c6cf752d352f8707345a38a2fd856aacb73b2ba4308132e67ef3b2881d78e88b7029d6e70c763c05d3bd3d3dad1f728320fa4b
-MISC ChangeLog 1390 SHA256 fa56b87b5e8c8307383be827d3b477da56dbea0eb0306761577f7e7567b21361 SHA512 8f7e7fde45ec5acde826cc704d17949db5881d85401c6b1928caead328eea40c27142f95a5986245d1e6e9d7576f43e36aa6555d887062ca4097a16d757276d9 WHIRLPOOL 90d83cdf0e4a89b756321d0dcb958110e1a49a8bbba8ec52428e021568779916a9c961049cd5fb897e99553d5b92dc0fa1a2fbe9ed025c95c6aaebc1d732d313
+EBUILD exfat-utils-1.0.1.ebuild 750 SHA256 b21e674caa721d3a29e26e9bd31652132c0e8ef895df28a20f5edaf1f4ed931e SHA512 03f27e20b0ee6ab11f04e527d7d6381784d38ae230a76e02e34231608ee879597bbb25c0614adfbbde82a6807757fa61935223e81100806ab417bdf1cf598ca2 WHIRLPOOL 19dd9f3e9b8ba97f78a4e8c1a00cf420a9b3f2a86f7009eb5bfc9685d7269c55a9376a9225bd65db1a4d197dc81df5571e22b9eb3390b1fe54ad7c7202dd1664
+MISC ChangeLog 1527 SHA256 8cc936eade686d427cd1b98235b6fb2a42cfb7a776328898d1edbd54585d0090 SHA512 156452b6d7abcebcc3166867922736d9c097fb37cd2b9e2e2d2d0afe881b7ce3f383153937cf5a9c99772db4e0af17daf8ec618325a0c9a87e3010dd4f1103d4 WHIRLPOOL 9e7a694b1c5eecbeef38e3413690a62829552c0a974ea0b297d1192eb1a7a9229d52623630418e74525b50022c31723815177c4d19374a3b8396fe712c5a1997
 MISC metadata.xml 338 SHA256 317a755d9c1030ff5a40e94154d052ed14e6bb0894287805319804eef05df68a SHA512 0067c955d38e87f0502dc6ac2bc8b9f50625d84d66e7d316109125685c05cc9de8d062058b78c26a784ceb97c5ad42b3e70efcdf36911a5060551b97b25fc736 WHIRLPOOL 0ddb58db1c9bcaf942b277f2092d07dfc0f08a4dffc75a6fe25dfc1739e83129c0cce8ebc11ab4fef8bbd473432373e8f7c8a0a8738066a9dd7f37fa115fb78e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlEfGPYACgkQ/ejvha5XGaNh8ACgv/jNTuB8jup0SVBlFXb2Hid1
-J8QAoMd5ourwGa+R3nrm1P/Nr02AXIUi
-=oekE
+iQEcBAEBCAAGBQJRHx7iAAoJEEdUh39IaPFNMOkIAJQY6oILTb4KJ8f6lcLuIFNv
+jaDXCfmiMXFTRRzaT6/jWPtQU3Y5zJ4C4DYT58wTcsQKlMJYSpgpzfJ1XBPRxhJT
+5/ZkTQOvbIEwAM7JwElXFo+fqdnlYZdxw3HeNWMO/R07WTK21HSHBtec8KCsoJTn
+1NhBIQtX3esPdPdXvZSVN4bxGMBiUxXith9gVJzg6qoWnrTS+MhCCV7nETyJkkKE
+sYh0MWDVVFWlCl1KgJtDRh6CNlSU4RkrSyohUx/s1AHXgXR7DMoNiHvidAK40m+d
+71uE7LLJURWEh+iMhQvxdogL6W+N4+140NHAz6aywPGsW/geG23Acs4d+zFE+F4=
+=X/s1
 -----END PGP SIGNATURE-----
