@@ -5,14 +5,20 @@ AUX 99-exfat.rules 55 SHA256 2d5408d03d33bcb4baba3f42160364ae92ee0d0408e16f73754
 AUX fuse-exfat-0.9.8-build-vars.patch 752 SHA256 ebbddeec420943166dc397b40486e4d82abac80bf385dbc5f7735c1d5bc71ff4 SHA512 fe567df19053909120d6f36a05d97a0945cad0ef1ad2388da6911cde77f06c18f5981294e3a68e3d200972c0233659f5f69b50328cb7af95fca5ca9afcfa7554 WHIRLPOOL b4d8c5ad4abaed381f1a01d4a2c623ae23846e33945c798cb661f91b705c08b910b08bfc78f41478ea9c6a7f9eea4c644c52047eed3f45201cf1cd0910e0e177
 DIST fuse-exfat-0.9.8.tar.gz 38286 SHA256 ecae22203461e508d53389617c17d22f68c1b565c700d7663ce67bc4a710e903 SHA512 70b74b896131d41bf7693c7495a99cf943dbaccb61499beb38a474ff09f06213b3ca2ae32907c94795e6f05c3c681ec5db10414283603f666145787e030b1694 WHIRLPOOL 3d45f70833326baa12e245d3304084c239a5feead52a6956b2634c8f1508ceed9a606962e0602b01870fb2106a0544ee0c59803ac2d64018270009fcdc56e4fd
 DIST fuse-exfat-1.0.0.tar.gz 39479 SHA256 18c0dafed64596e536c5d47604585ff353a2e4bb067066e3ec5963a5a170f4a5 SHA512 534d2fd6ffd1c4e656bfe0caecac7d2b466e862970eef4f99c36dde1ff2c70ee33d292f42cf313606a2396d4f743165938491d041a4391e56ad8497eede98bde WHIRLPOOL 8842eb526c0465f8f964962efccbde53ccf9babf9e683d213dcf3fcafe62a733d701719370ffcf46e9c2df2759c88284dcc3e70b975b8adb4e2195dfb9702b90
+DIST fuse-exfat-1.0.1.tar.gz 39627 SHA256 12ac1ba1b7d4343bef64e7898176705a41cfe3b5a7a179e28549d242e2854758 SHA512 e444031e7a6b999b3014ced255447bdfe4586b16970f36393706433262ca0cbd17911d6ca7af3465871f3136bdd9c8be2ec85f0dd124d670b240829093d341f6 WHIRLPOOL 521e1bc9356e2fcef7afc7720f5a4b017aa908f58af1537bc243ebfdfb6ba41dcba3cdb8d9e5b526e2333d93fffe4d0ffc5b29b9025387088f5b486393e5bf7c
 EBUILD fuse-exfat-0.9.8-r1.ebuild 946 SHA256 68c7ed4423fdc126cd7b158531f151e0054402151b6f422a4504a532ec93566f SHA512 caed720e77cf173f0fecd4ba93fd3ea75b043a8a65b5e2c542886b000b1e679e9ca2999f3fa9a6eb262096723055c3f99f555dc9ac01a5c30cda98a6328c8d15 WHIRLPOOL 0c045b1d722dde7263f4279cffce33a6296bfa8b011eabcd012281eeef698291f754b5d84f27d87be53679c530475109ff1d942f1e7cca4f758751255e15ff1c
 EBUILD fuse-exfat-1.0.0.ebuild 936 SHA256 762e6b4ea1e155f1cdae18a5db03bccc20dab1ddb7ec4d8d03dc3ab7b61ec315 SHA512 3ae8440c330b063cadba7ead2a0d68adbeeb72661e646bb44ed11d50eb5b48c773bf3542ba84c4a16e5edb6dcd402e91edd10f2d206730f83a848f02ec755c32 WHIRLPOOL f8822f74ffb0fc8a19106856dbf28a7f4e01faab66cd74f46699fdc4a0595134459dff4ca08b1a7d9e210e5e35d00f65a9a6cc517eb0c6e14411380b051f2eef
-MISC ChangeLog 2096 SHA256 b251e0415b05892fb2e61bbc1d2b82ea7891fce083291ec7b4d09a7f171a0918 SHA512 0ce262e1819f9699d617b50b5f0af59a42e890b389820f7aa4e2e99ab31599275b62b3ef11898abcd5ce13583882e5e426fa2e74c08b521900578843d32ad7f3 WHIRLPOOL 0906145ca89d3731f30128bb42d8ef66b4ef54a1e61d80e104422f042fee562c9cbe930f7bbe472cb35267482d6e2c8d08f0a372f04dbee8d9626cd73e653056
+EBUILD fuse-exfat-1.0.1.ebuild 938 SHA256 7cf86ebd7febdc134116282f5f0f4f9946f740079b5ceb1b84c01d7c9ead470d SHA512 695e7a793c499d2c1c620dc928249a3a60e5dd707fbd2d6ec69972b20530854c7a63214c3e690a57241a213412a2e1224b28fa9f0680f495b1c3cdb06d6992f8 WHIRLPOOL 9f2810f437a84b4cb7b32022a6f395193b283cc04d68ebd1cb677f9d98632eb43d5394713e80fbbeeb03091a503e655bda1a3599d662a2c36ce117b760bc795c
+MISC ChangeLog 2228 SHA256 a27d91692b3e4892a5c96ca35f7cff476704ac4ec894c3b6fa64db47de5fbf10 SHA512 9cb199658d33aa3441a5382563ed7ae9db45e2a99bdc129f425d03488696ce7873384d43ba0e8b4aa1537b1f7a5bf825bdc6d68958648928c17f4a615f7187f6 WHIRLPOOL 823f9cd7bb8bca3f384bd26476ca7ba1c338e002ee038416d63a2b7895137cb60ed9772e84dc337ffebbef794e64e82df9146375b0df1269538921eb6c4a7b6b
 MISC metadata.xml 338 SHA256 317a755d9c1030ff5a40e94154d052ed14e6bb0894287805319804eef05df68a SHA512 0067c955d38e87f0502dc6ac2bc8b9f50625d84d66e7d316109125685c05cc9de8d062058b78c26a784ceb97c5ad42b3e70efcdf36911a5060551b97b25fc736 WHIRLPOOL 0ddb58db1c9bcaf942b277f2092d07dfc0f08a4dffc75a6fe25dfc1739e83129c0cce8ebc11ab4fef8bbd473432373e8f7c8a0a8738066a9dd7f37fa115fb78e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlEfF/kACgkQ/ejvha5XGaPR5wCg5j07B4NLgXoa2P8MEER66GM/
-N0sAoNAJqOQ/J/Eoya0Py5FuCf6HX0aM
-=lCzY
+iQEcBAEBCAAGBQJRHx5/AAoJEEdUh39IaPFNsdwH/ivxKuiJN5+H0CMG9hpUa8/E
+7lrf9+DZZf9Xf5DQvZIaLuE0S/hJWZls5BRExewx/EUFqhazWusQdeYy6loWItQY
+z9SslX4G0yakvmwW+tlKlp5jVUrw9oEWklJIl4upnwVq2KIIQcGHI4OTcKmdrFfW
+kerbQT4EsEWZbUGQvTSW1AhINJADs7riDcVapCoO25EFZvKT0Tb+lQd8Giq8r+jG
+f4HVfjsaGIOEVZza2+5OEAiXMD/C0nD03yf5GofvzN3JBubyA82PFrO/Tr7tXtwV
+qyMSni2BAf+cg9KUDL7kK/L+YQsGPHLfEXczP7MnKIRRBxgNJBP5IvL1yqvY654=
+=wXxD
 -----END PGP SIGNATURE-----
