@@ -1,6 +1,11 @@
 # ChangeLog for sys-fs/fuse-exfat
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/fuse-exfat/ChangeLog,v 1.12 2013/02/16 05:24:07 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/fuse-exfat/ChangeLog,v 1.13 2013/02/16 05:52:10 ssuominen Exp $
+
+*fuse-exfat-1.0.1 (16 Feb 2013)
+
+  16 Feb 2013; Samuli Suominen <ssuominen@gentoo.org> +fuse-exfat-1.0.1.ebuild:
+  Version bump.
 
   16 Feb 2013; Zac Medico <zmedico@gentoo.org> fuse-exfat-1.0.0.ebuild:
   Add ~x86-linux keyword.
