@@ -1,6 +1,12 @@
 # ChangeLog for sys-fs/exfat-utils
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/exfat-utils/ChangeLog,v 1.9 2013/02/16 05:28:20 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/exfat-utils/ChangeLog,v 1.10 2013/02/16 05:53:49 ssuominen Exp $
+
+*exfat-utils-1.0.1 (16 Feb 2013)
+
+  16 Feb 2013; Samuli Suominen <ssuominen@gentoo.org>
+  +exfat-utils-1.0.1.ebuild:
+  Version bump.
 
   16 Feb 2013; Zac Medico <zmedico@gentoo.org> exfat-utils-1.0.0.ebuild:
   Add ~x86-linux keyword.
